# mario_ws

./: README.md
desktop/: Arduino Ros cmd  Github_repo_update.txt  Ros 2 laptops  Ros Commands
devel/: .catkin  .rosinstall
devel/include/car_srv/: Car.h  CarRequest.h  CarResponse.h
devel/include/map_msgs/: GetMapROI.h  GetMapROIRequest.h  GetMapROIResponse.h  GetPointMap.h  GetPointMapROI.h  GetPointMapROIRequest.h  GetPointMapROIResponse.h  GetPointMapRequest.h  GetPointMapResponse.h  OccupancyGridUpdate.h  PointCloud2Update.h  ProjectedMap.h  ProjectedMapInfo.h  ProjectedMapsInfo.h  ProjectedMapsInfoRequest.h  ProjectedMapsInfoResponse.h  SaveMap.h  SaveMapRequest.h  SaveMapResponse.h  SetMapProjections.h  SetMapProjectionsRequest.h  SetMapProjectionsResponse.h
devel/include/move_base_msgs/: MoveBaseAction.h  MoveBaseActionFeedback.h  MoveBaseActionGoal.h  MoveBaseActionResult.h  MoveBaseFeedback.h  MoveBaseGoal.h  MoveBaseResult.h  RecoveryStatus.h
devel/include/msg_custom/: Iotsensor.h  custommsg.h  data.h
devel/include/srv_custom/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  customsrv.h  customsrvRequest.h  customsrvResponse.h
devel/include/turtlebot3_example/: Turtlebot3Action.h  Turtlebot3ActionFeedback.h  Turtlebot3ActionGoal.h  Turtlebot3ActionResult.h  Turtlebot3Feedback.h  Turtlebot3Goal.h  Turtlebot3Result.h
devel/include/turtlebot3_msgs/: SensorState.h  Sound.h  VersionInfo.h
devel/lib/motion_pkg/: turtlesim_cleaner
devel/lib/motion_types/: GoalToGoal  go_to_goal  move_rotation  move_straight_line
devel/lib/msg_custom/: custom_msg_publisher_node  custom_msg_subscriber_node  iot_sensor_publisher_node  iot_sensor_subscriber
devel/lib/pkgconfig/: arduino.pc  car_srv.pc  map_msgs.pc  motion.pc  motion_pkg.pc  motion_types.pc  move_base_msgs.pc  msg_custom.pc  preception.pc  pub_sub.pc  robocar.pc  srv_custom.pc  talk_listen.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc  ultrasonic.pc  ultrasonic_via_bluetooth.pc
devel/lib/preception/: image_pub_sub_cpp  open_copy_cpp  read_video_cpp
devel/lib/pub_sub/: publisher_node_cpp  subscriber_node_cpp
devel/lib/robocar/: BoB_teleop
devel/lib/srv_custom/: add_two_ints_client  add_two_ints_server  client  server
devel/lib/talk_listen/: listener_node  talker_node
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_example/: turtlebot3_bumper  turtlebot3_client  turtlebot3_cliff  turtlebot3_marker_server  turtlebot3_obstacle  turtlebot3_server
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/lib/turtlebot3_slam/: flat_world_imu_node
devel/lib/turtlebot3_teleop/: turtlebot3_teleop_key
devel/share/arduino/cmake/: arduinoConfig.cmake
devel/share/car_srv/cmake/: car_srv-msg-paths.cmake  car_srvConfig.cmake
devel/share/map_msgs/cmake/: map_msgs-msg-paths.cmake  map_msgsConfig.cmake
devel/share/motion/cmake/: motionConfig.cmake
devel/share/motion_pkg/cmake/: motion_pkgConfig.cmake
devel/share/motion_types/cmake/: motion_typesConfig.cmake
devel/share/move_base_msgs/cmake/: move_base_msgs-msg-paths.cmake  move_base_msgsConfig.cmake
devel/share/msg_custom/cmake/: msg_custom-msg-extras.cmake  msg_custom-msg-paths.cmake  msg_customConfig.cmake
devel/share/preception/cmake/: preceptionConfig.cmake
devel/share/pub_sub/cmake/: pub_subConfig.cmake
devel/share/robocar/cmake/: robocarConfig.cmake
devel/share/srv_custom/cmake/: srv_custom-msg-extras.cmake  srv_custom-msg-paths.cmake  srv_customConfig.cmake
devel/share/talk_listen/cmake/: talk_listenConfig.cmake
devel/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
devel/share/turtlebot3_example/cmake/: turtlebot3_example-msg-extras.cmake  (+2 more)
src/Installation files/: Commands  Pyhton3 installation  To Install OpenCV  alias burger  pip Install
src/aloalo/: CMakeLists.txt  package.xml
src/arduino/: CMakeLists.txt  package.xml
src/arduino/launch/: arduino.launch
src/car_srv/: CMakeLists.txt  package.xml
src/car_srv/arduino/ServiceClient/: ServiceClient.ino
src/car_srv/scripts/: car_server.py
src/car_srv/srv/: Car.srv
src/motion_pkg/: CMakeLists.txt  package.xml
src/motion_pkg/launch/: motion.launch  spiral.launch
src/motion_pkg/scripts/: straight_line.py  straight_line_in_X.py  tb3_typyes_of_motion.py  types_of_motion.py
src/motion_pkg/src/: goal_to_goal_cpp.cpp
src/motion_types/: CMakeLists.txt
src/motion_types/launch/: gotogoal.launch
src/motion_types/scripts/: go_to_goal.py  rotation.py  rotation_abs.py  straight_line.py
src/motion_types/src/: go_to_goal.cpp  rotation.cpp  straight_line.cpp
src/msg_custom/: CMakeLists.txt  package.xml
src/msg_custom/scripts/: iotsensor_pub.py  iotsensor_sub.py  publisher.py  subscriber.py
src/msg_custom/src/: iotsensor_pub.cpp  iotsensor_sub.cpp  publisher.cpp  subscriber.cpp
src/preception/: CMakeLists.txt
src/preception/scripts/: Image_Encoding.ipynb  image_draw.py  image_encoding.py  image_pub_sub.py  image_structure.py  open_copy.py  read_video.py
src/preception/src/: open_copy.cpp
src/pub_sub/: CMakeLists.txt  package.xml
src/pub_sub/scripts/: publisher.py  subscriber.py
src/pub_sub/src/: publisher.cpp  subscriber.cpp
src/robocar/: CMakeLists.txt  package.xml
src/robocar/scripts/: Ultrasonic_sub.py  dead_reckoning.py  diff_tf.py  left_ticks_sub.py  pid_velocity.py  right_ticks_sub.py  robot_teleop_key  robot_teleop_key.py  twist_to_motors.py
src/robocar/src/: robot_teleop_key.cpp
src/srv_custom/: CMakeLists.txt  package.xml
src/srv_custom/scripts/: add_client.py  add_server.py  client.py  server.py
src/srv_custom/src/: add_client_cpp.cpp  add_server_cpp.cpp  client.cpp  server.cpp
src/talk_listen/: CMakeLists.txt
src/talk_listen/scripts/: talker.py
src/talk_listen/src/: listener.cpp  talker.cpp
src/ultrasonic/: CMakeLists.txt
src/ultrasonic/scripts/: Ultrasonic_sub.py
(+147 files in other folders)
